<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">csci571hw9</string>
    <string name="title">Stock Search</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter Stock Symbol</string>
    <string name="button_send"><b>Search</b></string>
    <string name="title_activity_display_information">Stock Search</string>
    <string name="symbol"></string>
    <string name="name"></string>
    <string name="LastTradePriceOnly"></string>
    <string name="changeType"></string>
    <string name="change"></string>
    <string name="PreviousClose"></string>
    <string name="PreviousClose2"></string>
    <string name="Open"></string>
    <string name="Open2"></string>
    <string name="Bid"></string>
    <string name="Bid2"></string>
    <string name="Ask"></string>
    <string name="Ask2"></string>
    <string name="OneYearTargetPrice"></string>
    <string name="OneYearTargetPrice2"></string>
    <string name="DayRange"></string>
    <string name="DayRange2"></string>
    <string name="YearRange"></string>
    <string name="YearRange2"></string>
    <string name="Volume"></string>
    <string name="Volume2"></string>
    <string name="AverageDailyVolume"></string>
    <string name="AverageDailyVolume2"></string>
    <string name="MarketCapitalization"></string>
    <string name="MarketCapitalization2"></string>
    <string name="NewsHeadlines">News Headlines</string>
    <string name="Facebook">Facebook</string>
    <string name="imageViewDescription">Image</string>
    <string name="ok">OK</string>
    <string name="app_id">624025554356206</string>

</resources>
